--- a/CSC_App/src/main/resources/application.properties
+++ b/CSC_App/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/CSC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
+#ORM s/w specific properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+server.port=8888
+
+
+logging.file.path= .
+logging.file.name = logging.log
