--- a/CSC_App/src/main/resources/application.properties
+++ b/CSC_App/src/main/resources/application.properties
@@ -9,8 +9,24 @@ spring.jpa.show-sql=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-server.port=8888
+server.port=8080
 
 
 logging.file.path= .
 logging.file.name = logging.log
+
+
+##gmail properties
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+#Spring security
+
+
+
